--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                             THAN 45-MINUTE !</h1>
                                     </div>
                                     <div>
-                                        <h3>
+                                        <h3 class="text-center text40">
                                             ur 100% Pain-relief guarantee in a single
                                             visit at Shining Smiles Dental Clinic in
                                             less than 45-minute.
@@ -339,21 +339,22 @@
 
                     </div>
                     <div class="row">
-                        <div class="col-lg-2">
+                        <div class="col-lg-1">
 
                         </div>
 
-                        <div class="col-lg-8">
+                        <div class="col-lg-10 mt-5">
                             <div>
-                                <h1 class="text-center text50">Is Your Toothache Still Giving You Sleepless Nights? Get
+                                <h1 class="text-left text50">Is Your Toothache Still Giving You Sleepless Nights? Get
                                     Painless
                                     Root Canal Treatment In A
                                     Single Visit With Dr.Niyati..... </h1>
                             </div>
-                            <div class="align-items-center">
-                                <p class="d-flex  flex-column align-items-center justify-content-center">
+                            <!-- <div class="align-items-center"> -->
                                 <div>
-                                    <h1 class="text32 text-center">Don't take temporary pain-relief medicine for your
+                                <p class="d-flex  flex-column align-items-left ">
+                                <div>
+                                    <h1 class="text32 text-left">Don't take temporary pain-relief medicine for your
                                         permanent tooth pain. Get rid of
                                         tooth pain with our advanced painless technique in a single visit at Shining
                                         Smiles
@@ -368,7 +369,7 @@
                         </div>
 
 
-                        <div class="col-lg-2">
+                        <div class="col-lg-1">
 
                         </div>
                     </div>
