--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </head>
 
-<body>
+<body class= onmousedown="return true" onselectstart="return false">
 
     <header>
         <div class="dental-hero-bg  ">
@@ -67,7 +67,7 @@
                 <div class="container-fluid nav-box">
                     <a class="navbar-brand" href="#">
                         <div class="nav-logo ">
-                            <img src="assets/images/logo.png" class="img-fluid">
+                            <img src="assets/images/logo.png" class="img-fluid "  oncontextmenu="return false">
                         </div>
                     </a>
                     <div class="navbar-nav ml-auto ">
@@ -251,7 +251,7 @@
                         <div class="row align-items-center justify-content-center">
                             <div class="col border pt-lg-0 pt-md-0 pt-4">
                                 <div class="abox">
-                                    <img src="assets/images/image-312.png" class="img-fluid">
+                                    <img src="assets/images/image-312.png" class="img-fluid"  oncontextmenu="return false">
                                     <p>Star Rating</p>
                                     <span></span>
                                 </div>
@@ -259,7 +259,7 @@
                             <div class="col border pt-lg-0 pt-md-0 pt-4">
                                 <div class="abox">
                                     <div class="vector">
-                                        <img src="assets/images/image-311.png" class="img-fluid">
+                                        <img src="assets/images/image-311.png" class="img-fluid"  oncontextmenu="return false">
                                         <p>3,000+</p>
                                     </div>
                                     <p>Happy Patients</p>
@@ -267,14 +267,14 @@
                             </div>
                             <div class="col border pt-lg-0 pt-4">
                                 <div class="abox three-four">
-                                    <img src="assets/images/image-317.png" class="img-fluid">
+                                    <img src="assets/images/image-317.png" class="img-fluid"  oncontextmenu="return false">
                                     <p>Instant pain-relief</p>
                                 </div>
                             </div>
 
                             <div class="col pt-lg-0 pt-4">
                                 <div class="abox three-four ">
-                                    <img src="assets/images/image-315.png" class="img-fluid">
+                                    <img src="assets/images/image-315.png" class="img-fluid"  oncontextmenu="return false">
                                     <p>100% Satisfaction Guarentee</p>
                                 </div>
                             </div>
@@ -284,7 +284,7 @@
                         <div class="row align-items-center justify-content-center">
                             <div class="col-md-4 border pt-lg-0 pt-md-0 pt-4">
                                 <div class="abox">
-                                    <img src="assets/images/image-312.png" class="img-fluid">
+                                    <img src="assets/images/image-312.png" class="img-fluid"  oncontextmenu="return false">
                                     <p>Star Rating</p>
                                     <span></span>
                                 </div>
@@ -292,7 +292,7 @@
                             <div class="col-md-4 border pt-lg-0 pt-md-0 pt-4">
                                 <div class="abox">
                                     <div class="vector">
-                                        <img src="assets/images/image-311.png" class="img-fluid">
+                                        <img src="assets/images/image-311.png" class="img-fluid"  oncontextmenu="return false">
                                         <p>3,000+</p>
                                     </div>
                                     <p>Happy Smiles</p>
@@ -300,19 +300,19 @@
                             </div>
                             <div class="col-md-4 border pt-lg-0 pt-md-0 pt-4">
                                 <div class="abox three-four">
-                                    <img src="assets/images/image-313.png" class="img-fluid">
+                                    <img src="assets/images/image-313.png" class="img-fluid"  oncontextmenu="return false"> 
                                     <p>Satisfaction Guarantee</p>
                                 </div>
                             </div>
                             <div class="col-md-4 border pt-lg-0 pt-md-3 pt-4">
                                 <div class="abox three-four">
-                                    <img src="assets/images/image-314.png" class="img-fluid">
+                                    <img src="assets/images/image-314.png" class="img-fluid" oncontextmenu="return false">
                                     <p>Instant Results</p>
                                 </div>
                             </div>
                             <div class="col-md-4 pt-lg-0 pt-md-3 pt-4">
                                 <div class="abox three-four">
-                                    <img src="assets/images/image-315.png" class="img-fluid">
+                                    <img src="assets/images/image-315.png" class="img-fluid"  oncontextmenu="return false">
                                     <p>Scientifically Proof</p>
                                 </div>
                             </div>
@@ -331,10 +331,10 @@
                     <div class="discover-images">
 
                         <div class="main-img ">
-                            <img src="assets/images/logo_1.png" class="img-fluid logo1_1 ">
+                            <img src="assets/images/logo_1.png" class="img-fluid logo1_1 "  oncontextmenu="return false">
                         </div>
                         <div class="abs-img1">
-                            <img src="assets/images/DSC01913-1.png" class="img-fluid girl_1 ">
+                            <img src="assets/images/DSC01913-1.png" class="img-fluid girl_1 "  oncontextmenu="return false">
                         </div>
 
                     </div>
@@ -436,7 +436,7 @@
                     <div class="row align-items-center justify-content-center">
                         <div class="col-lg-5">
                             <div>
-                                <img src="assets/images/DSC019-1.png" class="img-fluid">
+                                <img src="assets/images/DSC019-1.png" class="img-fluid"  oncontextmenu="return false">
                             </div>
                         </div>
 
@@ -557,7 +557,7 @@
                         </div>
                         <div class="col-lg-4 order-lg-last order-md-first order-first">
                             <div class="d-flex justify-content-md-center align-content-md-center">
-                                <img src="assets/images/new-teeth.png" class="img-fluid">
+                                <img src="assets/images/new-teeth.png" class="img-fluid"  oncontextmenu="return false">
 
                             </div>
                             <!-- <div class="d-flex justify-content-md-center align-content-md-center  teeth_1">
@@ -601,35 +601,35 @@
                         <p class="d-flex  flex-column align-items-center justify-content-center">
 
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 1. Single sitting root cancal</b>
+                            <b><img src="assets/images/3.png"  oncontextmenu="return false" class="img-fluid"> 1. Single sitting root cancal</b>
                         </div>
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 2. Cosmetic Dentistry</b>
+                            <b><img src="assets/images/3.png" oncontextmenu="return false" class="img-fluid"> 2. Cosmetic Dentistry</b>
                         </div>
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 3. Paediatric Dentistry</b>
+                            <b><img src="assets/images/3.png" oncontextmenu="return false" class="img-fluid"> 3. Paediatric Dentistry</b>
                         </div>
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 4. Implants</b>
+                            <b><img src="assets/images/3.png" oncontextmenu="return false" class="img-fluid"> 4. Implants</b>
                         </div>
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 5. Dentures</b>
+                            <b><img src="assets/images/3.png" oncontextmenu="return false" class="img-fluid"> 5. Dentures</b>
                         </div>
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 6. Minor Surgeries</b>
+                            <b><img src="assets/images/3.png" oncontextmenu="return false" class="img-fluid"> 6. Minor Surgeries</b>
                         </div>
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 7. Complete Smile Designing</b>
+                            <b><img src="assets/images/3.png" oncontextmenu="return false" class="img-fluid"> 7. Complete Smile Designing</b>
                         </div>
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 8. Tooth Coloured Filling</b>
+                            <b><img src="assets/images/3.png" oncontextmenu="return false" class="img-fluid"> 8. Tooth Coloured Filling</b>
                         </div>
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 9. Crown and Bridge (5 yrs to 10 yrs
+                            <b><img src="assets/images/3.png" oncontextmenu="return false" class="img-fluid"> 9. Crown and Bridge (5 yrs to 10 yrs
                                 warranty)</b>
                         </div>
                         <div class="my-5 lh-1 ">
-                            <b><img src="assets/images/3.png" class="img-fluid"> 10. Dental Veneers</b>
+                            <b><img src="assets/images/3.png" oncontextmenu="return false" class="img-fluid"> 10. Dental Veneers</b>
                         </div>
                         <!-- <b><img src="assets/images/3.png" class="img-fluid">2. Cosmetic Dentistry</b>
                             <br class="d-lg-block d-md-block d-sm-none d-none">
@@ -685,7 +685,7 @@
                         <div class="owl-carousel">
                             <div class="slider-card">
                                 <div class="d-flex justify-content-center align-items-center mb-4">
-                                    <img src="assets/images/teeth/client-1.png" class="img-fluid">
+                                    <img src="assets/images/teeth/client-1.png" class="img-fluid"  oncontextmenu="return false">
                                 </div>
 
 
@@ -695,7 +695,7 @@
 
                             <div class="slider-card">
                                 <div class="d-flex justify-content-center align-items-center mb-4">
-                                    <img src="assets/images/teeth/client-2.png" class="img-fluid">
+                                    <img src="assets/images/teeth/client-2.png"  oncontextmenu="return false" class="img-fluid">
                                 </div>
 
 
@@ -705,7 +705,7 @@
 
                             <div class="slider-card">
                                 <div class="d-flex justify-content-center align-items-center mb-4">
-                                    <img src="assets/images/teeth/client-3.png" class="img-fluid">
+                                    <img src="assets/images/teeth/client-3.png"  oncontextmenu="return false" class="img-fluid">
                                 </div>
                                 <!-- <h5 class="mb-0 text-center"><b>Jay S Gaikwad</b></h5>
                                 <p class="text-center p-4">I've visited Esthetix dental for my braces Dr
@@ -750,7 +750,7 @@
             </div>
         </div>
         <div class="col-sm-6 col-lg-5  new1-teeth_img">
-            <img src="assets/images/new1-teeth.png" class="img-fluid">
+            <img src="assets/images/new1-teeth.png"  oncontextmenu="return false" class="img-fluid">
         </div>
     </div>
     <!-- <section>
