--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                         </div>
                         <div class="col-lg-4 order-lg-last order-md-first order-first">
                             <div class="d-flex justify-content-md-center align-content-md-center">
-                                <img src="assets/images/new-teeth.png" class="img-fluid"  oncontextmenu="return false">
+                                <img src="assets/images/new-teeth1" class="img-fluid"  oncontextmenu="return false">
 
                             </div>
                             <!-- <div class="d-flex justify-content-md-center align-content-md-center  teeth_1">
