--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                             <div class="align-items-center">
                                 <p class="d-flex  flex-column align-items-center justify-content-center">
                                 <div>
-                                    <p class="text32">Still Looking For A Tooth Pain Solution?? (Still have tooth pain
+                                    <p class="text32 p-0 m-0">Still Looking For A Tooth Pain Solution?? (Still have tooth pain
                                         after your root
                                         canal ? Or, Searching- How painful is a root canal on an infected tooth? Don't
                                         worry, We have done more than 500+ Root Canal Treatment in the last 4 Years. At
@@ -731,9 +731,9 @@
     </section>
     <!-- end -->
 
-    <div class="row  d-flex flex-sm-row flex-column p-0 m-0  discover_4">
+    <div class="row  d-flex flex-sm-row flex-column p-5 m-5  discover_4">
         <div class="col-sm-6 col-lg-7   ">
-            <div class="row text40 mt-4">
+            <div class="row text40 mt-2">
 
                 <h1 class="text-white ">Discover Our New Painless Implant
                     Surgery With Same-Day Teeth At
