--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </nav>
-
+2
             <div class="container">
                 <div class="dental">
                     <div class="dental-hero  ">
@@ -441,8 +441,9 @@
                         </div>
 
                         <div class="col-lg-7">
-                            <div class="align-items-center">
-                                <p class="d-flex  flex-column align-items-center justify-content-center">
+                            <div class="text-start">
+<!--                                 <p class="d-flex  flex-column align-items-center justify-content-center"> -->
+                                 <p class="d-flex  flex-column text start">
                                 <div>
                                     <p class="text32 p-0 m-0">Still Looking For A Tooth Pain Solution?? (Still have tooth pain
                                         after your root
