--- a/index.html
+++ b/index.html
@@ -505,7 +505,8 @@
         <div style="background-color: #f4f4f4;">
             <div class="container">
                 <div class="new-teeth">
-                    <h1 class="d-lg-none d-md-block d-sm-block d-block text-lg-start text-md-center text-center">
+<!--                     <h1 class="d-lg-none d-md-block d-sm-block d-block text-lg-start text-md-center text-center"> -->
+                     <h1 class="d-lg-none d-md-block d-sm-block d-block text-lg-start text-md-center text-start">
                         Is Your Toothache Still Giving You Sleepless Nights? Get Painless Root Canal Treatment In A
                         Single Visit At Esthetix Dental.....</h1>
                     <div class="row align-items-center justify-content-center align-content-center">
